# statistics

./: .gitignore  Cargo.toml  a_o_comparison1700232435306.json  a_o_comparison1700232589331.json  a_o_comparison1700233363483.json  a_o_comparison1700233424391.json  a_o_comparison1700234268051.json  a_o_comparison1700234989071.json  build_and_run.sh  code_autoextender.js  compare.js  compare2.js  compare_all.js  compare_sort.js  dynamically_created.rs  functions.module.js  log.txt  main.js  make_random_bytes.sh  multi_process.js  o_s_n_bytes_o_run.json  o_s_n_bytes_o_run_1699996830547.json  o_s_n_bytes_o_run_1699997258871.json  o_s_n_bytes_o_run_1699997801996.json  o_s_n_bytes_o_run_1700152114336.json  o_s_n_bytes_o_run_1700163947682.json  o_s_n_bytes_o_run_1700177641952.json  o_s_n_bytes_o_run_1700177841161.json  o_s_n_bytes_o_run_1700177867834.json  o_s_n_bytes_o_run_1700177888279.json  o_s_n_bytes_o_run_1700177990740.json  o_s_n_bytes_o_run_1700178002293.json  o_s_n_bytes_o_run_1700178006482.json  o_s_n_bytes_o_run_1700178009663.json  o_s_n_bytes_o_run_1700178014259.json  o_s_n_bytes_o_run_1700178627809.json  o_s_n_bytes_o_run_1700178659815.json  o_s_n_bytes_o_run_1700178665088.json  o_s_n_bytes_o_run_1700178688449.json  o_s_n_bytes_o_run_1700178851197.json  (+14 more)
c_to_wasm/: build.sh  client.html  main.c  main.js  main.wasm  pass_array_to_wasm.html  webserver.js
random_test_data/: a_n_u8__len_64000
src/: dynamically_created copy.rs  dynamically_created.js  dynamically_created.rs  dynamically_created_autoextended.rs  find_min.rs  functions.module.js  main.rs  mod.js  (+3 more)
