[package]
name = "wasm_speed_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/main.rs" # Pointing to your main.rs file


[dependencies]
wasm-bindgen = "0.2.88"
